getFirst() is not available in JDK 17